Clear old data before harvesting